Enable watchlist rating, facility, status and type functionality (closes #38)